# margana-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: REPO_SPLIT_STRATEGY.md  deployment-inventory.md  ecs-cli-validation-notes.md  puzzle-generator-api.md  puzzle-generator-performance.md
ecs/: Dockerfile  generate-column-puzzle-madness.py  generate-column-puzzle.py  generator_wrapper.py  main.py  requirements.txt  validate-puzzle.py
lambdas/: lambda-process-margana-results.py  lambda_dashboard_summary.py  lambda_margana_metric.py  lambda_submission.py
packaging/: build_lambda_artifacts.sh
postmarkTemplates/: leaderboardInvite.html  verification_email.html
python/: analyze_fixed_letter_difficulty.py  generate-column-puzzle-madness.py  generate-column-puzzle.py  horizontal-exclude-words.txt  lambda_athena_events_parquet_runner.py  lambda_cognito_delete_user_audit.py  lambda_leaderboard_service.py  lambda_leaderboard_snapshot.py  lambda_post_confirmation_action.py  lambda_pre_auth_approval.py  lambda_profile_service.py  lambda_terms_audit.py  lambda_user_settings.py  query_dynamodb.py  requirements.txt  search_repace_sub_db.py  ses_sns_events_notification.py  simulate-madness-yield.py  validate-word-from-list.py
resources/: margana-completed.json  margana-semi-completed.json  margana-user-results.json  s3-put-margana-user-results-event.json  sample-margana-body.json  sample-margana-event.json  sample-palindrome-event.json
tests/: test_completed_payload_builder.py  test_ecs_generator_core.py  test_ecs_generator_golden.py  test_ecs_main.py  (+13 more)
(+81 files in other folders)
