[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "margana-backend"
version = "0.1.0"
description = "Backend logic and Lambda handlers for the Margana platform."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Paul Bradbury"}
]
# Core runtime dependencies (used by Lambdas)
dependencies = [
    "boto3>=1.28,<2.0",
]

[project.optional-dependencies]
# Development and testing tools
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.10.0",
    "boto3-stubs[essential]",
    "black>=24.0.0",
    "isort>=5.13.0",
]

[tool.setuptools]
# Ensure that non-Python files (like word lists or JSON) are included in the build
include-package-data = true

[tool.setuptools.packages.find]
# Look for Python packages in the 'python/' directory
where = ["python"]

[tool.setuptools.package-data]
# Specifically include data files needed at runtime (e.g., word lists, templates)
"*" = ["*.txt", "*.json", "*.html"]

[tool.pytest.ini_options]
# Configuration for running tests
testpaths = ["python/tests"]
pythonpath = ["python"]
addopts = "-ra -q"